--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #111;
+    background-color: skyblue;
     color: white;
     padding: 15px;
     text-align: center;
@@ -47,18 +47,18 @@ table, th, td {
 }
 
 th {
-    background-color: #ddd;
+    background-color: pink;
 }
 
 footer {
-    background-color: #111;
-    color: white;
+    background-color: skyblue;
+    color: orange;
     text-align: center;
     padding: 10px;
 }
 
 #ancre {
-    color: red;
+    color: deeppink;
 }
 
 .lien-image img {
